Fixed UnPersistent Player Handling.